[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Enemies/Stay/Default/stay_default_head.png" type="Texture" id=1]
[ext_resource path="res://src/Prototype files/StayEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_oval/Explosion_blue_oval1.png" type="Texture" id=3]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_oval/Explosion_blue_oval2.png" type="Texture" id=4]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_oval/Explosion_blue_oval7.png" type="Texture" id=5]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_oval/Explosion_blue_oval3.png" type="Texture" id=6]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_oval/Explosion_blue_oval5.png" type="Texture" id=7]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_oval/Explosion_blue_oval4.png" type="Texture" id=8]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_oval/Explosion_blue_oval6.png" type="Texture" id=9]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_oval/Explosion_blue_oval8.png" type="Texture" id=10]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_oval/Explosion_blue_oval10.png" type="Texture" id=11]
[ext_resource path="res://assets/Explosions FXs/Explosion_blue_oval/Explosion_blue_oval9.png" type="Texture" id=12]
[ext_resource path="res://assets/Enemies/Stay/Default/stay_default_base.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 18 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 244.118, 173.53 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.6667, 111.765 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "explosion",
"speed": 15.0
} ]

[node name="stay_enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="TestEnemy1" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 13 )

[node name="Attack" type="Sprite" parent="TestEnemy1"]
position = Vector2( 5.88235, -88.2353 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )
offset = Vector2( -33, -17.647 )

[node name="Begin" type="Sprite" parent="TestEnemy1/Attack"]

[node name="Beam" type="Sprite" parent="TestEnemy1/Attack"]

[node name="Position2D" type="Position2D" parent="TestEnemy1/Attack"]

[node name="EnteringZone" type="Area2D" parent="TestEnemy1" groups=["EnteringZone"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestEnemy1/EnteringZone"]
position = Vector2( 8.82353, -14.7059 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 7 )

[node name="Hitbox" type="Area2D" parent="TestEnemy1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestEnemy1/Hitbox"]
position = Vector2( 1.66667, -11.7647 )
shape = SubResource( 2 )

[node name="explosion" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 3 )
frames = SubResource( 3 )
animation = "explosion"

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="TestEnemy1/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="animation_finished" from="explosion" to="." method="_on_explosion_animation_finished"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
